--- a/pages/curriculum/curriculum.wxss
+++ b/pages/curriculum/curriculum.wxss
@@ -1,31 +1,29 @@
 /* pages/curriculum/curriculum.wxss */
-/* Header */
+/* HEADER GRADIENT */
 .header-index::before {
-    content: '';
-    width: 100%;
-    height: 230px;
-    z-index: -1000;
-    background-image: -webkit-linear-gradient(330deg, #d4fc79 0%, #96e6a1 100%);
-    transform-origin: left bottom;
-    position: absolute;
-    top: 0;
-    left: 0;
-    -webkit-transform: skew(0deg, -15deg);
-    transform: skew(0deg, -15deg);
+  content: '';
+  width: 100%;
+  height: 230px;
+  z-index: -1000;
+  background-image: -webkit-linear-gradient(330deg, #d4fc79 0%, #96e6a1 100%);
+  transform-origin: left bottom;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: skew(0deg, -15deg);
 }
 .header-index:after {
-    content: '';
-    width: 100%;
-    height: 250px;
-    z-index: -1001;
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
-    transform-origin: right bottom;
-    position: absolute;
-    top: 0;
-    left: 0;
-    -webkit-transform: skew(0deg, 9deg);
-    transform: skew(0deg, 9deg);
-    opacity: 0.4;
+  content: '';
+  width: 100%;
+  height: 250px;
+  z-index: -1001;
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  transform-origin: right bottom;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: skew(0deg, 9deg);
+  opacity: 0.4;
 }
 .h1-index {
   font-weight:800;
@@ -36,7 +34,7 @@
   line-height:70rpx;
 }
 
-/* Card top */
+/* CARD SECTION */
 .card {
   background-color: white;
   border-radius: 8rpx;
@@ -46,7 +44,6 @@
   max-width:100%;
   position: relative;
   margin-top: 20px;
-
 }
 .card-content {
   padding:30rpx; 
@@ -63,31 +60,36 @@
 .card-profile {
   background-color: #F5F5F5;
   height:136rpx;
+  position: relative;
 }
 .card-avatar {
-width:80rpx;
-height: 80rpx;
-border-radius:100%;
-display:flex;
-background-image:linear-gradient(-225deg, rgba(30,30,30,0.1) 30%, rgba(46,46,46,0.3) 80%), url('http://os51j6pf4.bkt.clouddn.com/boris-face.png');
-background-position:center;
-position:absolute;
-bottom:14px;
-margin-left:18px;
+  width:80rpx;
+  height: 80rpx;
+  border-radius:100%;
+  display:flex;
+  background-image:linear-gradient(-225deg, rgba(30,30,30,0.1) 30%, rgba(46,46,46,0.3) 80%), url('http://os51j6pf4.bkt.clouddn.com/boris-face.png');
+  background-position:center;
+  position:absolute;
+  bottom:14px;
+  margin-left:18px;
 }
 .avatar-info {
-position:absolute;
-right:146px;
-bottom:15px;
-line-height:36rpx;
-
+  position:absolute;
+  right:146px;
+  bottom:15px;
+  line-height:36rpx;
 }
 .avatar-name {
   font-size: 28rpx;
   font-weight: 600; 
 }
-
-/* Shanghai card */
+.img-grad {
+  background: linear-gradient(-225deg, rgba(30,30,30,0.6) 30%, rgba(46,46,46,0.5) 80%);
+}
+.img-grad image {
+  z-index: -1000;
+}
+/* shanghai card */
 .card-shanghai {
   display:flex;
   position: relative; 
@@ -113,7 +115,7 @@ line-height:36rpx;
   font-weight: 400;
 }
 
-/* Header swiper */
+/* HEADER SWIPER */
 image {
   width: 50px;
   height: 50px;
@@ -125,9 +127,7 @@ image {
   padding-top: 10rpx;
 }
 
-
-/* Swiper */
-
+/* SWIPER */
 .swiper-wrap {
   margin-top: 45px;
   margin-bottom: 30px;
@@ -137,27 +137,43 @@ image {
 swiper {
   height:270px;
 }
-.slide-image {
+.image-style {
   height: 100%;
   width: 100%;
   border-radius: 8rpx 8rpx;
   position: absolute;
-   top: 300px;
   left: 0;
+  z-index: -1000;
 }
-.course {
-  position: relative;
+.img-grad {
+  background: linear-gradient(-225deg, rgba(30,30,30,0.6) 30%, rgba(46,46,46,0.5) 80%);
+  position:absolute;
+  width:100%;
+  left:0;
+  height:100%;
+  z-index:1;
+  border-radius:8rpx;
+  top:35px;
 }
-.course text {
-  position: absolute;
+.h1-white {
+  position:absolute;
   width: 100%;
-  top: 300px;
   left: 0;
+  top:160px;
+  margin-left:40rpx;
+  z-index:2;
+}
+.desc-white {
+  position:absolute;
+  width: 100%;
+  left: 0;
+  top:190px;
+  padding-left:40rpx;
+  max-width:300px;
+  z-index:2;
 }
 
-
-
-/* Small cards */
+/* CARDS SM SECTION */
 .card-sm {
   height: 100px;
   width: 100%;
@@ -218,9 +234,7 @@ swiper {
   display: flex;
   margin-top:13px;
 }
-
-
- /* Gradient bootom */ 
+ /* GRADIENT BOTTOM SECTION */ 
 
 .text-box-custom {
   padding-top: 60rpx;
@@ -237,7 +251,6 @@ swiper {
   opacity:0.3;
   margin-top:192px;
 }
-
 .green-gradient:after {
   content:'';
   width:100%;
@@ -251,7 +264,7 @@ swiper {
   margin-top:140px;
 }
 
-/* Learning mode and end Goal*/
+/* LEARNING MODE & END GOAL SECTION */
 
 .planning-card {
   background-color: transparent;
