--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -60,6 +60,64 @@ image {
   position:relative;
 }
 
+
+/* Active animation */
+
+.scrolldown {
+	position: absolute;
+  bottom:45px;
+	left: 40%;
+	display: block;
+	text-align: center;
+	line-height: 50px;
+	border-radius: 100%;
+	height: 70px;
+	width: 70px;
+	z-index: 1;
+	transition: transform ease-out .1s,background .2s;
+}
+
+.scrolldown:after {
+	pointer-events: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	content: '';
+	box-sizing: content-box
+}
+
+
+.scrolldown:after {
+	top: 0;
+	left: 0;
+	padding: 0;
+	z-index: -1;
+	box-shadow: 0 0 0 2px rgba(170,170,170,.1);
+	opacity: 0;
+  animation: sonarEffect 1.3s ease-out infinite;
+}
+
+@keyframes sonarEffect {
+	0% {
+		opacity: .3
+	}
+	40% {
+		opacity: .5;
+		box-shadow: 0 0 0 2px rgba(170,170,170,.4),0 0 10px 10px #AAA,0 0 0 10px rgba(170,170,170,.8)
+	}
+
+	100% {
+		box-shadow: 0 0 0 2px rgba(170,170,170,.4),0 0 10px 10px #AAA,0 0 0 10px rgba(170,170,170,.8);
+		transform: scale(1.5);
+		opacity: 0
+	}
+}
+
+
+
+/* Circle animation not smooth */
+
 .sonar {
   position: absolute;
   bottom:33px;
@@ -70,10 +128,9 @@ image {
    left: 0;
    border-radius:100%;
    background-color: #D8D8D8;
-   animation-fill-mode: both;
+ 
    position:absolute;
-   opacity: 0; 
-   animation: jumper 1.8s 0.33333s ease-out infinite;
+   animation: jumper 3s 0.22222s linear infinite;
 }
 .sonar:after{  
    content: '';
@@ -81,22 +138,31 @@ image {
    left: 0;
    border-radius:100%;
    background-color: #D8D8D8;
-   animation-fill-mode: both;
+   animation: jumper 3s 0.55555s linear infinite;
    position:absolute;
-   opacity: 0; 
-   animation: jumper 1.8s 0.66666s ease-out infinite;
+   transform: scale(3);
 }
 @keyframes jumper {
-  from {
+  0% {
+    transform: scale(1);
     width: 70px;
     height: 70px;
     border-width:5px;
     opacity:1;
   }
-  to {
+  50% {
+   transform: scale(2);
+   opacity:0.5;
+   border-width:2.5px;
+  }
+  100% {
     transform: scale(3);
     opacity:0;
     border-width:1px;
   }
 }
+
+
+
+
 
