--- a/app.wxss
+++ b/app.wxss
@@ -49,7 +49,13 @@ button{
 
 .em {
   font-style: italic;
-  color:#D03232;
+}
+
+.em-grey {
+  font-style: italic;
+  color:#AAA;
+  font-size: 24rpx;
+  font-weight: 500;
 }
 
 .desc {
