--- a/pages/overview/overview.wxss
+++ b/pages/overview/overview.wxss
@@ -1,12 +1,12 @@
 /* pages/overview/overview.wxss */
-/* Images */
+/* IMAGES  */
 .img-box-1 {
   text-align: center;
   background-size: cover;
   height: 300px;
   display:flex;
   align-items: center;
-  background-image: linear-gradient(-225deg, rgba(30,30,30,0.6) 30%, rgba(46,46,46,0.5) 80%), url('http://os51j6pf4.bkt.clouddn.com/img-1.png');
+  background-image: linear-gradient(-225deg, rgba(30,30,30,0.6) 30%, rgba(46,46,46,0.5) 80%), url('http://osadw33sx.bkt.clouddn.com/overview-img-1.png');
   background-position: center;
 }
 .img-text {
@@ -28,7 +28,7 @@
   height: 300px;
   display:flex;
   align-items: center;
-  background-image: linear-gradient(-225deg, rgba(30,30,30,0.6) 30%, rgba(46,46,46,0.5) 80%), url('http://os51j6pf4.bkt.clouddn.com/img-2.png');
+  background-image: linear-gradient(-225deg, rgba(30,30,30,0.6) 30%, rgba(46,46,46,0.5) 80%), url('http://osadw33sx.bkt.clouddn.com/overview-img-2.png');
   background-position: center;
 }
 
@@ -48,7 +48,6 @@
   box-sizing: border-box;
   margin:0rpx 140rpx 40rpx;
 }
-
 .cta-red {
   width: 100%;
   border-radius: 8rpx;
