--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -33,8 +33,8 @@
   margin-top:60rpx;
 }
 
-/* Card lecture */
-.card {
+/* Card lecture & workshop */
+.card-lecture {
   background-color: white;
   border-radius: 8rpx;
   box-shadow: 3px 6px 12px 0px rgba(0,0,0,0.1); 
@@ -42,10 +42,16 @@
   width:100%;
   position: relative;
   margin-top: 20px;
-
 }
-.top-border {
-  border-left: 4px solid #2ECC71;
+.card-workshop {
+  background-color:white;
+  border-radius:8rpx;
+  box-shadow:3px 6px 12px 4px rgba(0,0,0,0.1);
+  min-height:135px;
+  width:100%;
+  position:relative;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 .card-content {
   padding:30rpx; 
@@ -67,50 +73,69 @@
   font-size: 28rpx;
   font-style: italic;
 }
-.card-profile {
+.card-profile-green {
   background-color: #F5F5F5;
   height:136rpx;
   position:relative;
-
+  border-left: 4px solid #2ECC71;
+}
+.card-profile-red {
+  background-color: #F5F5F5;
+  height:136rpx;
+  position:relative;
+  border-left: 4px solid #D23333;
 }
 .card-avatar {
-width:80rpx;
-height: 80rpx;
-border-radius:100%;
-display:flex;
-background-image:linear-gradient(-225deg, rgba(30,30,30,0.1) 30%, rgba(46,46,46,0.3) 80%), url('http://os51j6pf4.bkt.clouddn.com/boris-face.png');
-background-position:center;
-position:absolute;
-bottom:14px;
-margin-left:18px;
+  width:80rpx;
+  height:80rpx;
+  border-radius:100%;
+  display:flex;
+  background-position:center;
+  position:absolute;
+  bottom:14px;
+  left:15px;
+}
+.grad-avatar {
+  background:linear-gradient(-225deg, rgba(30,30,30,0.1) 30%, rgba(46,46,46,0.3) 80%);
+  width:80rpx;
+  height:80rpx;
+  border-radius:100%;
+  z-index: 3;
+  bottom:14px;
+  left:15px;
+  position: absolute;
 }
 .avatar-info {
   position:absolute;
   left:68px;
-  bottom:15px;
+  bottom:14px;
   line-height:36rpx;
 }
 .avatar-name {
   font-size: 28rpx;
   font-weight: 600; 
 }
-.course-desc {
-  padding: 30rpx;
+.position {
+  font-size:23rpx;
 }
+.course-desc {
+  padding: 30rpx 30rpx 20rpx 30rpx;
+}
+
 .course-desc view{
   color: #999999;
-  font-size:28rpx;
+  font-size: 28rpx;
   padding-top:9rpx;
 }
 .sub-title-desc {
   font-size:35rpx;
   font-weight:600;
+  line-height:30rpx;
 }
-
 /* CTA */
 .cta-container {
   background-color: #F4F4F4;
-  height:120px;
+  height:200px;
   padding-top: 25rpx;
   padding-bottom: 25rpx;
 }
@@ -121,7 +146,7 @@ margin-left:18px;
   justify-content: space-between;
   padding: 13rpx 8px;
   box-sizing: border-box;
-  margin:0rpx 140rpx 40rpx;
+  margin:0rpx 140rpx 0rpx;
 }
 .cta-red {
   width: 100%;
@@ -130,6 +155,19 @@ margin-left:18px;
   color: white;
   text-align: center;
   vertical-align: center;
+  font-weight: bold;
+  font-size: 35rpx;
+  padding:25rpx;
+}
+
+.cta-white {
+   width: 100%;
+  border-radius: 8rpx;
+  background-color: white;
+  color: black;
+  text-align: center;
+  vertical-align: center;
+
   font-weight: bold;
   font-size: 35rpx;
   padding:25rpx;
