clean style and add contact page

--- a/app.wxss
+++ b/app.wxss
@@ -32,8 +32,14 @@ button{
   font-weight:800;
   font-size: 48rpx; 
 }
-
-
+.h1-gradient {
+  font-weight:800;
+  font-size: 60rpx; 
+  color: white;
+  text-shadow: 0px 2px 0px rgba(0,0,0,0.15);
+  padding: 60rpx 60rpx 30rpx 60rpx;
+  line-height:70rpx;
+}
 .h2 {
   font-weight: 700;
   font-size: 36rpx;
@@ -50,14 +56,18 @@ button{
 .em {
   font-style: italic;
 }
-
 .em-grey {
   font-style: italic;
   color:#AAA;
   font-size: 24rpx;
   font-weight: 500;
 }
-
+.grey-text {
+  font-size: 30rpx;
+  font-weight: 500;
+  color: #AAA;
+  line-height:15px;
+}
 .desc {
   margin-top: 20rpx;
   color: black;
@@ -87,16 +97,147 @@ button{
   text-align: left;
 }
 
-/* Small headers */
-.header {
-  height: 80px;
+/* GRADIENT HEADER */
+.orange-gradient:before {
+    content: '';
+    width: 100%;
+    height: 230px;
+    z-index: -1000;
+    background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);
+    transform-origin: left bottom;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transform: skew(0deg, -15deg);
+    transform: skew(0deg, -15deg);
 }
-.text-box {
-  padding-top:48rpx;
+.orange-gradient:after {
+    content: '';
+    width: 100%;
+    height: 250px;
+    z-index: -1001;
+    background-image: linear-gradient(-225deg, #FF719A 0%, #FFA99F 48%, #FFE29F 100%);
+    transform-origin: right bottom;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transform: skew(0deg, 9deg);
+    transform: skew(0deg, 9deg);
+    opacity: 0.4;
 }
-.grey-text {
-  font-size: 30rpx;
-  font-weight: 500;
-  color: #AAA;
-  line-height:15px;
+.green-gradient:before {
+  content: '';
+  width: 100%;
+  height: 230px;
+  z-index: -1000;
+  background-image: -webkit-linear-gradient(330deg, #d4fc79 0%, #96e6a1 100%);
+  transform-origin: left bottom;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: skew(0deg, -15deg);
 }
+.green-gradient:after {
+  content: '';
+  width: 100%;
+  height: 250px;
+  z-index: -1001;
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  transform-origin: right bottom;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: skew(0deg, 9deg);
+  opacity: 0.4;
+}
+.blue-gradient:before {
+  content: '';
+  width: 100%;
+  height: 230px;
+  z-index: -500;
+  background-image: linear-gradient(to right, #1cd8d2, #93edc7);
+  transform-origin: left bottom;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: skew(0deg, -15deg);
+}
+.blue-gradient:after {
+    content: '';
+    width: 100%;
+    height: 250px;
+    z-index: -501;
+    background-image: -webkit-linear-gradient(left, #1cd8d2, #93edc7);
+    background-image: linear-gradient(to right, #1cd8d2, #93edc7);
+    -webkit-transform-origin: right bottom;
+    transform-origin: right bottom;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transform: skew(0deg, 9deg);
+    transform: skew(0deg, 9deg);
+    opacity: 0.4;
+}
+/* PROFIL CARD INSIDE CARDS */
+.avatar-info {
+  line-height:36rpx;
+  flex-grow: 70%;
+  margin-left:17px;
+  margin-top:36rpx;
+}
+.avatar-name {
+  font-size: 28rpx;
+  font-weight: 600; 
+}
+.position {
+  font-size:23rpx;
+}
+
+/* CTA */
+.cta-container {
+  background-color: #F4F4F4;
+  height:120px;
+  padding-top: 25rpx;
+  padding-bottom: 25rpx;
+}
+.cta-box {
+  height: 100%;
+  display: flex;
+  padding: 13rpx 8px;
+  margin:0rpx 140rpx 40rpx;
+}
+.cta-red {
+  width: 100%;
+  border-radius: 8rpx;
+  background-color: #D23333;
+  color: white;
+  text-align: center;
+  vertical-align: center;
+  font-weight: bold;
+  font-size: 35rpx;
+  padding:25rpx;
+}
+.cta-white {
+  width: 100%;
+  border-radius: 8rpx;
+  background-color: white;
+  color: black;
+  text-align: center;
+  vertical-align: center;
+  font-weight: bold;
+  font-size: 35rpx;
+  padding:25rpx;
+}
+.cta-green {
+  width: 100%;
+  border-radius: 8rpx;
+  background-color: #7FBF54;
+  color: white;
+  text-align: center;
+  vertical-align: center;
+  font-weight: bold;
+  font-size: 35rpx;
+  padding:25rpx;
+}
+
+
