--- a/pages/conditions/conditions.wxml
+++ b/pages/conditions/conditions.wxml
@@ -10,7 +10,13 @@
   <view class="h1">Part-time accelerated course.</view>
    <view class="card-desc">
    Le Wagon's <text class="em">Fast</text>-track program welcomes seasoned professionals, with a track record in either digital, design, sales, marketing or general management in China. 
-
+   </view>
+   <view class="em-conditions tc">
+    <image src="/image/white_logo_red_circle.png"></image>
+    <view class="text-box">
+     <view class="grey-text">WE WILL START FROM SCRATCH</view>
+     <text> NO PRE-REQUISITES IN WEB DEVELOPMENT</text>
+    </view>
    </view>
    <view class="h3">In particular, we expect you:</view>
    <view class="list-box">
@@ -18,19 +24,6 @@
     <view class="list-item">- To be a strong team player</view>
     <view class="list-item">- To build sh*t that matters</view>
     <view class="list-item">- To be up for some challenges</view>
-   </view>
-
-   <view class="tc">
-    <image src="/image/white_logo_red_circle.png"></image>
-    <view class="text-box">
-     <view class="grey-text">WE WILL START FROM SCRATCH</view>
-     <text> NO PRE-REQUISITES IN WEB DEVELOPMENT</text>
-    </view>
-   </view>
-
-
-
-   <view class="em-conditions tc">
    </view>
    <view class="h3">Terms & Conditions:</view>
     <view class="list-box">
@@ -43,9 +36,9 @@
 </view>
 <view class="cta-container">
  <view class="tc h3">
-  <text>CURRICULUM</text>
+  <text>BACK TO</text>
   <view class="cta-box tc">
-   <navigator url="" class="cta-red" bindtap="backBtn">Back</navigator>
+   <navigator url="" class="cta-red" bindtap="backBtn">CURRICULUM</navigator>
   </view>
  </view>
 </view>
