--- a/pages/curriculum/curriculum.wxss
+++ b/pages/curriculum/curriculum.wxss
@@ -1,44 +1,13 @@
 /* pages/curriculum/curriculum.wxss */
-/* HEADER GRADIENT */
+/* FIX COMMON STYLE */
 .container {
   padding: 0rpx 20rpx;
 }
-.header-index::before {
-  content: '';
-  width: 100%;
-  height: 230px;
-  z-index: -1000;
-  background-image: -webkit-linear-gradient(330deg, #d4fc79 0%, #96e6a1 100%);
-  transform-origin: left bottom;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: skew(0deg, -15deg);
+.h1 {
+  line-height:54rpx;
 }
-.header-index:after {
-  content: '';
-  width: 100%;
-  height: 250px;
-  z-index: -1001;
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
-  transform-origin: right bottom;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: skew(0deg, 9deg);
-  opacity: 0.4;
-}
-.h1-index {
-  font-weight:800;
-  font-size: 60rpx; 
-  color: white;
-  text-shadow: 0px 2px 0px rgba(0,0,0,0.15);
-  padding: 60rpx 60rpx 30rpx 60rpx;
-  line-height:70rpx;
-}
-
 /* CARD SECTION */
-.card {
+.card-border-left {
   background-color: white;
   border-radius: 8rpx;
   border-left: 4px solid #2ECC71;
@@ -46,13 +15,9 @@
   min-height:135px;
   max-width:100%;
   position: relative;
-  margin-top: 20px;
 }
-.card-content {
+.card-head-section {
   padding:30rpx; 
-}
-.h1 {
-  line-height:48rpx;
 }
 .card-desc {
   margin-top: 20rpx;
@@ -64,30 +29,18 @@
   background-color: #F5F5F5;
   height:136rpx;
   position: relative;
+  display: flex;
 }
 .card-avatar {
-  width:80rpx;
-  height: 80rpx;
+  width:90rpx;
+  height:90rpx;
   border-radius:100%;
   display:flex;
   background-image:linear-gradient(-225deg, rgba(30,30,30,0.1) 30%, rgba(46,46,46,0.3) 80%), url('http://osadw33sx.bkt.clouddn.com/boris-avatar.png');
   background-position:center;
-  position:absolute;
-  bottom:14px;
-  margin-left:18px;
-}
-.avatar-info {
-  position:absolute;
-  left:70px;
-  bottom:15px;
-  line-height:36rpx;
-}
-.avatar-name {
-  font-size: 28rpx;
-  font-weight: 600; 
-}
-.position {
-  font-size:23rpx;
+  flex-grow:30%;
+  margin-left:35rpx;
+  margin-top:24rpx;
 }
 .img-grad {
   background: linear-gradient(-225deg, rgba(30,30,30,0.6) 30%, rgba(46,46,46,0.5) 80%);
@@ -98,7 +51,6 @@
 /* shanghai card */
 .card-shanghai {
   display:flex;
-  position: relative; 
   height:100px;
   width: 100%;
   border-radius: 8rpx;
@@ -113,10 +65,9 @@
   padding: 30rpx;
   font-weight: 500;
   vertical-align: center;
-  position: absolute;
-  top:26rpx;
+  margin-top:25rpx;
 }
-.subtitle {
+.subtitle-shanghai-card {
   font-size: 28rpx;
   font-weight: 400;
 }
@@ -132,10 +83,11 @@ image {
 .text-box {
   padding-top: 10rpx;
 }
-
+.logo-title-box {
+  margin-bottom:-26rpx;
+}
 /* SWIPER */
 .swiper-wrap {
-  margin-top: 45px;
   margin-bottom: 30px;
   padding-left: 15rpx;
   padding-right: 15rpx;
@@ -200,8 +152,14 @@ margin-top:13px;
   margin-left:40rpx;
   z-index:2;
 }
-
-
+/* INTERMEDIATE TITLES */
+.text-header-box {
+  padding: 30rpx;
+}
+.text-header-box2 {
+  padding-top:84rpx;
+  padding-bottom:30rpx;
+}
 /* CARDS SM SECTION */
 .card-sm {
   height: 100px;
@@ -220,11 +178,10 @@ margin-top:13px;
   height:110px;
   width:90px;
   position: relative;
-  background-color: #f4f4f4;
   overflow: hidden;
 }
 .card-sm-pic image {
-  width:79px;
+  width:82px;
   height:100px;
   z-index:1;
   position:relative;
@@ -263,12 +220,9 @@ margin-top:13px;
   display: flex;
   margin-top:13px;
 }
- /* GRADIENT BOTTOM SECTION */ 
 
-.text-box-custom {
-  padding-top: 60rpx;
-}
-.green-gradient:before {
+ /* BODY GREEN GRADIENT */ 
+.green-body-gradient:before {
  content:'';
   width:100%;
   height:170px;
@@ -280,7 +234,7 @@ margin-top:13px;
   opacity:0.3;
   margin-top:192px;
 }
-.green-gradient:after {
+.green-body-gradient:after {
   content:'';
   width:100%;
   height:170px;
@@ -290,11 +244,10 @@ margin-top:13px;
   position:absolute;
   transform:skew(0deg, 155deg);
   opacity:0.3;
-  margin-top:140px;
+  margin-top:410px;
 }
 
 /* LEARNING MODE & END GOAL SECTION */
-
 .planning-card {
   background-color: transparent;
   padding: 20rpx 20rpx 20rpx 20rpx;
@@ -331,46 +284,21 @@ margin-top:13px;
 }
 
 /* CTA */
-.cta-container {
+.cta-container-curriculum {
   background-color: #F4F4F4;
   height: 240px;
-  padding-top:30rpx;
-
+  padding-top:25rpx;
+  margin-top:100rpx;
+  position: relative;
 }
-.cta-container image {
-  margin-top: 30rpx;
+.cta-container-curriculum image {
+  margin-top:30px;
 }
-.cta-box {
+.cta-box-curriculum {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  margin:0rpx 140rpx 0rpx;
+  padding:30rpx 120rpx 0rpx 120rpx;
 }
-.cta-white {
-   width: 100%;
-  border-radius: 8rpx;
-  background-color: white;
-  color: black;
-  text-align: center;
-  vertical-align: center;
-  margin-top: 40rpx;
-  font-weight: bold;
-  font-size: 35rpx;
-  padding:25rpx;
-}
-.cta-green {
-  width: 100%;
-  border-radius: 8rpx;
-  background-color: #7FBF54;
-  color: white;
-  text-align: center;
-  vertical-align: center;
-  margin-top: 40rpx;
-  font-weight: bold;
-  font-size: 35rpx;
-  padding:25rpx;
-}
+
 
 
 
