--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,42 +1,5 @@
 /**index.wxss**/
-.header-index::before {
-    content: '';
-    width: 100%;
-    height: 230px;
-    z-index: -1000;
-    background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);
-    transform-origin: left bottom;
-    position: absolute;
-    top: 0;
-    left: 0;
-    -webkit-transform: skew(0deg, -15deg);
-    transform: skew(0deg, -15deg);
-}
-.header-index:after {
-    content: '';
-    width: 100%;
-    height: 250px;
-    z-index: -1001;
-    background-image: linear-gradient(-225deg, #FF719A 0%, #FFA99F 48%, #FFE29F 100%);
-    transform-origin: right bottom;
-    position: absolute;
-    top: 0;
-    left: 0;
-    -webkit-transform: skew(0deg, 9deg);
-    transform: skew(0deg, 9deg);
-    opacity: 0.4;
-}
-.h1-index {
-  font-weight:800;
-  font-size: 60rpx; 
-  color: white;
-  text-shadow: 0px 2px 0px rgba(0,0,0,0.15);
-  padding: 60rpx 60rpx 30rpx 60rpx;
-  line-height:70rpx;
-}
-.conatiner {
-  padding: 0px 
-}
+/* FIX COMMON STYLE */
 .desc {
   margin-top: 0rpx;
 }
@@ -49,8 +12,6 @@
   box-shadow: 3px 6px 16px 0px rgba(0,0,0,0.2);
 }
 
-  
-
 /* Animation */
 
 image {
@@ -59,13 +20,9 @@ image {
   z-index: 1;
   position:relative;
 }
-
-
-/* Active animation */
-
-.scrolldown {
+.sonarEffect {
 	position: absolute;
-  bottom:45px;
+  bottom:62px;
 	left: 40%;
 	display: block;
 	text-align: center;
@@ -76,20 +33,15 @@ image {
 	z-index: 1;
 	transition: transform ease-out .1s,background .2s;
 }
-
-.scrolldown:after {
+.sonarEffect:after {
 	pointer-events: none;
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
 	content: '';
-	box-sizing: content-box
-}
-
-
-.scrolldown:after {
-	top: 0;
+	box-sizing: content-box;
+  top: 0;
 	left: 0;
 	padding: 0;
 	z-index: -1;
@@ -97,7 +49,6 @@ image {
 	opacity: 0;
   animation: sonarEffect 1.3s ease-out infinite;
 }
-
 @keyframes sonarEffect {
 	0% {
 		opacity: .3
@@ -114,9 +65,7 @@ image {
 	}
 }
 
-
-
-/* Circle animation not smooth */
+/* Multiple circle animation not working well */
 
 .sonar {
   position: absolute;
